# robocup_ws

./: ROS2_SERVICES_AND_ACTIONS.md
src/coqui_tts_interfaces/: CMakeLists.txt  package.xml
src/coqui_tts_interfaces/action/: SpeakText.action
src/coqui_tts_interfaces/srv/: RobotStatus.srv  SynthesizeSpeech.srv
src/coqui_tts_service/: README.md  package.xml  setup.cfg  setup.py
src/coqui_tts_service/coqui_tts_service/: coqui_talking_face_action_node.py  coqui_tts_service_node.py  ollama_chatbot_node.py  robot_status_node.py  whisper_command_node.py
src/coqui_tts_service/launch/: ollama_chatbot.launch.py  voice_interaction_stack.launch.py
src/deepsort_people_follow/: README.md  package.xml  setup.cfg  setup.py
src/deepsort_people_follow/deepsort_people_follow/: deepsort_people_follow_node.py
src/deepsort_people_follow/launch/: deepsort_people_follow.launch.py
src/speech_transcription_service/: README.md  package.xml  setup.cfg  setup.py
src/speech_transcription_service/launch/: speech_transcription_service.launch.py  voice_interaction_stack.launch.py
src/speech_transcription_service/resource/: speech_transcription_service
src/speech_transcription_service/speech_transcription_service/: speech_transcription_node.py
src/yoloe_detection_interfaces/: CMakeLists.txt  package.xml
src/yoloe_detection_interfaces/msg/: Detection3D.msg  Detection3DArray.msg  PeopleTrack2D.msg  PeopleTrack2DArray.msg  PeopleTrack3D.msg  PeopleTrack3DArray.msg
src/yoloe_detection_interfaces/srv/: DetectObjectPrompt.srv  SetTracking.srv
src/yoloe_detection_service/: README.md  package.xml  setup.cfg  setup.py
src/yoloe_detection_service/launch/: yoloe_detection_service.launch.py  yoloe_pointed_detection_service.launch.py  yoloe_vlm_pointed_detection_service.launch.py
src/yoloe_detection_service/yoloe_detection_service/: yoloe_detection_client.py  yoloe_detection_service_node.py  yoloe_pointed_detection_client.py  yoloe_pointed_detection_service_node.py  yoloe_tracking_control_client.py  yoloe_vlm_pointed_detection_service_node.py
