<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coqui_tts_service</name>
  <version>0.0.1</version>
  <description>ROS2 service node that synthesizes speech with Coqui TTS.</description>
  <maintainer email="usern@example.com">usern</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>coqui_tts_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
