<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speech_transcription_service</name>
  <version>0.0.1</version>
  <description>ROS2 Whisper speech transcription service with wake phrase detection.</description>
  <maintainer email="usern@example.com">usern</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>alsa-utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
